# Kirinnn808.github.io

./: .nojekyll  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: quarto-publish.yml
_site/: about.html  index.html
