[project]
name = "kirinnn808-github-io"
version = "0.1.0"
description = "kirin website"
authors = [
    {name = "kirin",email = "test@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "kirinnn808"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
